Fri Apr 19 20:07:11 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (append_keys_to_tree):
	ensure_style before calling size_request.

Thu Apr 18 17:56:12 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (theme_changed_func): handle new
	theme-changeing code.

2002-04-11  Jacob Berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): add pixmap

2002-04-10  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* keybinding.desktop.in:
	* keyboard-shortcut.png:

	Add a piss-poor-at-small-sizes-but-better-than-nothing
	icon.
	
Sat Apr  6 11:57:50 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-keybinding-properties.c (setup_dialog): man, was this code
	silly.  Also, themes are case sensitive.
	(is_metacity_running): Add support for metacity keybindings.  This
	is off by default until I write code to actually detect metacity.

2002-03-29  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (create_dialog) : remove the startup
	  warning caused by looking in the current directory for the glade file.
	(key_theme_changed) : add some protection for missing schemas.

Tue Mar 26 23:27:24 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (setup_dialog): Only show themes
	if they actually have a keybinding.  Also, initialize the keytheme
	correctly.

2002-03-26  Seth Nickell  <snickell@stanford.edu>

	* keybinding.desktop.in:

	Use "keyboard shortcuts" to match the window title