@@ -1,3 +1,8 @@
+2002-04-26  Havoc Pennington  <hp@pobox.com>
+
+	* gnome-keybinding-properties.c (append_keys_to_tree): fix 
+	non-use of accessor functions.
+
 Fri Apr 19 20:07:11 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-keybinding-properties.c (append_keys_to_tree):
